--- a/bag/templates/bag/product-image.html
+++ b/bag/templates/bag/product-image.html
@@ -1,10 +1,10 @@
 <!-- Product Image -->
 {% if item.product.image %}
     <a href="{% url 'product_detail' item.product.id %}">
-        <img class="img-fluid" src="{{ item.product.image.url }}" alt="{{ product.name }}">
+        <img class="image-ratio img-fluid" src="{{ item.product.image.url }}" alt="{{ product.name }}">
     </a>
 {% else %}
     <a href="{% url 'product_detail' item.product.id %}">
-        <img class="card-img-top img-fluid" src="{{ MEDIA_URL }}no_image.jpg" alt="{{ product.name }}">
+        <img class="image-ratio img-fluid" src="{{ MEDIA_URL }}no_image.jpg" alt="{{ product.name }}">
     </a>
 {% endif %}
