feat: restyle image input thumbnail and text

--- a/products/templates/products/add_product.html
+++ b/products/templates/products/add_product.html
@@ -70,10 +70,12 @@
                     {% endfor %}
 
                     <!-- Image Selection -->
+                    {{ form.image.label_tag }}
+                    <em class="d-inline ms-2">Images should be in a 16:9 aspect ratio</em>
                     {{ form.image }}
 
                     <!-- Buttons -->
-                    <div class="button-group my-3 d-flex justify-content-end">
+                    <div class="button-group mt-5 d-flex justify-content-end">
 
                         <!-- Cancel Button -->
                         <a href="{% url 'products' %}" class="ib-button ib-button-grey text-decoration-none text-ib-dark font-title weight-bold shadow-sm">
