fix: static link to sort_box js file - remove leading '/'

--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -171,5 +171,5 @@
 
 {% block extra_js_end %}
     <!-- Sort Box JS -->
-    <script src="{% static '/products/js/sort_box.js' %}"></script>
+    <script src="{% static 'products/js/sort_box.js' %}"></script>
 {% endblock %}
