--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -63,7 +63,7 @@
             <!-- Product EDIT / DELETE Buttons -->
             {% if request.user.is_superuser %}
                 <div class="mt-2 gy-3">
-                    <a href="{% url 'edit_product' product.id %}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
+                    <a href="{% url 'edit_product' product.id %}?next={{ request.path|urlencode }}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
                     <a type="button" data-toggle="modal" data-target="#modal-{{ product.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>                            
                 </div>
 
@@ -193,7 +193,7 @@
                     {% if request.user.is_superuser or request.user == review.user %}
                         <div class="row">
                             <div class="mt-2 gy-3">
-                                <a href="{% url 'edit_review' review.id %}?next={{request.path}}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
+                                <a href="{% url 'edit_review' review.id %}?next={{ request.path|urlencode }}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
                                 <button type="button" data-toggle="modal" data-target="#modal-{{ review.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>                            </div>
                         </div>
 
