--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -118,7 +118,7 @@
                                             <!-- Product EDIT / DELETE Buttons -->
                                             {% if request.user.is_superuser %}
                                                 <div class="mt-3 gy-3">
-                                                    <a href="{% url 'edit_product' product.id %}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
+                                                    <a href="{% url 'edit_product' product.id %}?next={{ request.path|urlencode }}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
                                                     <a type="button" data-toggle="modal" data-target="#modal-{{ product.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>                           
                                                 </div>
 
