--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -188,11 +188,11 @@
 
                 <!-- Product Card -->
                 {% for product in products %}
-                    {% if product.is_featured %}
+                    {% if not product.discontinued and product.is_featured %}
                         <div class="col-md-6 col-lg-4 gy-3">
                             <div class="card shadow product-card h-100">
                                 <div class="card-category-label mb-1 position-absolute">
-                                    <a href="" class="font-body d-flex text-blue text-decoration-none align-items-center">
+                                    <a href="{% url 'products' %}?category={{ product.category.name }}" class="font-body d-flex text-blue text-decoration-none align-items-center">
                                         <div class="bg-blue category-icon-circle-sm me-1">
                                             <i class="fas fa-{% if product.category.name == 'the_bees' %}bug{% elif product.category.name == 'the_kit' %}box-archive{% elif product.category.name == 'courses' %}graduation-cap{% elif product.category.name == 'produce' %}jar{% else %}shop{% endif %} text-ib-light text-center"></i>
                                         </div>
@@ -213,7 +213,7 @@
 
                                 <!-- Product Name -->
                                 <div class="card-body bg-ib-white pb-2">
-                                    <h5 class="text-uppercase text-center font-body weight-semibold">{{ product.name }}</h5>
+                                    <h5 class="text-uppercase text-center font-body weight-semibold text-ib-dark">{{ product.name }}</h5>
                                 </div>
 
                                 <!-- Card Footer - Rating, Price & Edit/Delete -->
@@ -221,34 +221,21 @@
 
                                     <div class="row">
                                         <div class="col-6 pe-0">
-                                            <div class="row">
 
                                                 <!-- Product Rating -->
-                                            <div class="rating-div pe-0">
-                                                <span class="rating-hex-small rating-hex-{% if product.rating >= 1 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small rating-hex-{% if product.rating >= 2 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small rating-hex-{% if product.rating >= 3 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small rating-hex-{% if product.rating >= 4 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small me-2 rating-hex-{% if product.rating >= 5 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <p class="d-inline font-body mt-n2 text-nowrap">{{ product.review_count }} REVIEW{% if product.review_count > 1%}S{% endif %}</p>
-                                            </div>
-                                            </div>
+                                                <div class="rating-div pe-0">
+                                                    <span class="rating-hex-small rating-hex-{% if product.rating >= 1 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <span class="rating-hex-small rating-hex-{% if product.rating >= 2 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <span class="rating-hex-small rating-hex-{% if product.rating >= 3 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <span class="rating-hex-small rating-hex-{% if product.rating >= 4 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <span class="rating-hex-small me-1 rating-hex-{% if product.rating >= 5 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                </div>
 
-                                            <div class="row">
-                                                <!-- Product EDIT / DELETE Buttons -->
-                                                {% if request.user.is_superuser %}
-                                                    <div class="card-edit-delete-div mt-2 gy-3">
-                                                        <a href="" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
-                                                        <a href="" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>
-                                                    </div>
-                                                {% endif %}
-                                            </div>
                                         </div>
 
                                         <div class="col-6 ps-0 mt-auto d-flex justify-content-end">
-                                            
                                             <!-- Product Price -->
-                                            <div class=""><p class="card-price weight-semibold">£{{ product.price }}</p></div>
+                                            <div class=""><p class="card-price weight-semibold ib-lh-1 text-ib-dark">£{{ product.price }}</p></div>
                                         </div>
                                     </div>
                                 </div>
@@ -256,7 +243,6 @@
                         </div>
                     {% endif %}
                 {% endfor %}
-                <!-- End of Product Card -->
             </div>
             <!-- End of Product Cards Container -->
         </div>  
