--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -74,8 +74,21 @@
                     <em class="d-inline ms-2">Images should be in a 16:9 aspect ratio</em>
                     {{ form.image }}
 
+                    <!-- Discontinue? -->
+                    <hr class="mt-5 mb-2">
+                    <span class="d-flex mt-3 mb-2 text-ib-warning">
+                        {{ form.discontinued }}
+                        <span class="ms-3 checkbox-label d-flex align-items-end">{{ form.discontinued.label_tag }}</span>
+        
+                    </span>
+                    <em>Selecting this will mean the product does not appear on the site. It will only be accessible in the admin panel.</em>
+                    {% for error in form.discontinued.errors  %}
+                        <span class="text-ib-warning weight-semibold ib-lh-2">{{error}}</span>
+                    {% endfor %}
+
                     <!-- Hidden input to redirect user back to previous page once submitted -->
                     <input type="hidden" name="redirect_url" value="{{ request.GET.next }}">
+                    <p>{{ request.GET.next }}</p>
 
                     <!-- Buttons -->
                     <div class="button-group mt-5 d-flex justify-content-end">
