--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -70,92 +70,60 @@
 
                 <!-- Product Card -->
                 {% for product in products %}
-                    <div class="col-md-6 col-lg-4 gy-3">
-                        <div class="card shadow product-card h-100">
-                            <div class="card-category-label mb-1 position-absolute">
-                                <a href="{% url 'products' %}?category={{ product.category.name }}" class="font-body d-flex text-blue text-decoration-none align-items-center">
-                                    <div class="bg-blue category-icon-circle-sm me-1">
-                                        <i class="fas fa-{% if product.category.name == 'the_bees' %}bug{% elif product.category.name == 'the_kit' %}box-archive{% elif product.category.name == 'courses' %}graduation-cap{% elif product.category.name == 'produce' %}jar{% else %}shop{% endif %} text-ib-light text-center"></i>
-                                    </div>
-                                    <p class="font-title weight-semibold section-title text-uppercase">{{ product.category.friendly_name }}</p>
-                                </a>
-                            </div>
-
-                            <!-- Product Image -->
-                            {% if product.image %}
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img class="image-ratio img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
-                                </a>
-                            {% else %}
-                                <a href="{% url 'product_detail' product.id %}">
-                                    <img class="image-ratio img-fluid" src="{{ MEDIA_URL }}no_image.jpg" alt="{{ product.name }}">
-                                </a>
-                            {% endif %}
-
-                            <!-- Product Name -->
-                            <div class="card-body bg-ib-white pb-2">
-                                <h5 class="text-uppercase text-center font-body weight-semibold text-ib-dark">{{ product.name }}</h5>
-                            </div>
-
-                            <!-- Card Footer - Rating, Price & Edit/Delete -->
-                            <div class="card-footer pt-0 pb-3">
-
-                                <div class="row">
-                                    <div class="col-6 pe-0">
-                                        <div class="row">
-
-                                            <!-- Product Rating -->
-                                            <div class="rating-div pe-0">
-                                                <span class="rating-hex-small rating-hex-{% if product.rating >= 1 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small rating-hex-{% if product.rating >= 2 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small rating-hex-{% if product.rating >= 3 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small rating-hex-{% if product.rating >= 4 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                                <span class="rating-hex-small me-1 rating-hex-{% if product.rating >= 5 %}true{% else %}false{% endif %}">&#x2B22;</span>
-                                            </div>
+                    {% if not product.discontinued %}
+                        <div class="col-md-6 col-lg-4 gy-3">
+                            <div class="card shadow product-card h-100">
+                                <div class="card-category-label mb-1 position-absolute">
+                                    <a href="{% url 'products' %}?category={{ product.category.name }}" class="font-body d-flex text-blue text-decoration-none align-items-center">
+                                        <div class="bg-blue category-icon-circle-sm me-1">
+                                            <i class="fas fa-{% if product.category.name == 'the_bees' %}bug{% elif product.category.name == 'the_kit' %}box-archive{% elif product.category.name == 'courses' %}graduation-cap{% elif product.category.name == 'produce' %}jar{% else %}shop{% endif %} text-ib-light text-center"></i>
                                         </div>
+                                        <p class="font-title weight-semibold section-title text-uppercase">{{ product.category.friendly_name }}</p>
+                                    </a>
+                                </div>
 
-                                        <div class="row">
-                                            <!-- Product EDIT / DELETE Buttons -->
-                                            {% if request.user.is_superuser %}
-                                                <div class="mt-3 gy-3">
-                                                    <a href="{% url 'edit_product' product.id %}?next={{ request.path|urlencode }}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
-                                                    <a type="button" data-toggle="modal" data-target="#modal-{{ product.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>                           
+                                <!-- Product Image -->
+                                {% if product.image %}
+                                    <a href="{% url 'product_detail' product.id %}">
+                                        <img class="image-ratio img-fluid" src="{{ product.image.url }}" alt="{{ product.name }}">
+                                    </a>
+                                {% else %}
+                                    <a href="{% url 'product_detail' product.id %}">
+                                        <img class="image-ratio img-fluid" src="{{ MEDIA_URL }}no_image.jpg" alt="{{ product.name }}">
+                                    </a>
+                                {% endif %}
+
+                                <!-- Product Name -->
+                                <div class="card-body bg-ib-white pb-2">
+                                    <h5 class="text-uppercase text-center font-body weight-semibold text-ib-dark">{{ product.name }}</h5>
+                                </div>
+
+                                <!-- Card Footer - Rating, Price & Edit/Delete -->
+                                <div class="card-footer pt-0 pb-3">
+
+                                    <div class="row">
+                                        <div class="col-6 pe-0">
+
+                                                <!-- Product Rating -->
+                                                <div class="rating-div pe-0">
+                                                    <span class="rating-hex-small rating-hex-{% if product.rating >= 1 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <span class="rating-hex-small rating-hex-{% if product.rating >= 2 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <span class="rating-hex-small rating-hex-{% if product.rating >= 3 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <span class="rating-hex-small rating-hex-{% if product.rating >= 4 %}true{% else %}false{% endif %}">&#x2B22;</span>
+                                                    <span class="rating-hex-small me-1 rating-hex-{% if product.rating >= 5 %}true{% else %}false{% endif %}">&#x2B22;</span>
                                                 </div>
 
-                                                <!-- Confirm Delete Modal - Defensive Programming -->
-                                                <div class="modal fade" id="modal-{{ product.id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                                                    <div class="modal-dialog" role="document">
-                                                        <div class="modal-content">
-                                                            <div class="modal-header justify-content-between bg-dark-grey py-3">
-                                                                <h5 class="font-body text-ib-light">DELETE PRODUCT</h5>
-                                                                <button type="button" class="close modal-close-cross text-ib-light" data-dismiss="modal" aria-label="Close">
-                                                                    <span aria-hidden="true" class="ib-lh-1">&times;</span>
-                                                                </button>
-                                                            </div>
-                                                            <div class="modal-body pb-2 font-body">
-                                                                <p>Are you sure you want to delete this product: <strong>"{{ product.name }}"</strong>?</p>
-                                                            </div>
-                                                            <div class="modal-footer pt-0">
-                                                                <button type="button" class="edit-del-btn dismiss-btn font-title text-decoration-none weight-regular align-middle me-2" data-dismiss="modal">CLOSE</button>
-                                                                <a href="{% url 'delete_product' product.id %}?next={{ request.path|urlencode }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>
-                                                            </div>
-                                                        </div>
-                                                    </div>
-                                                </div>
-                                            {% endif %}
-
                                         </div>
-                                    </div>
 
-                                    <div class="col-6 ps-0 mt-auto d-flex justify-content-end">
-                                        
-                                        <!-- Product Price -->
-                                        <div class=""><p class="card-price weight-semibold ib-lh-1 text-ib-dark">£{{ product.price }}</p></div>
+                                        <div class="col-6 ps-0 mt-auto d-flex justify-content-end">
+                                            <!-- Product Price -->
+                                            <div class=""><p class="card-price weight-semibold ib-lh-1 text-ib-dark">£{{ product.price }}</p></div>
+                                        </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                    </div>
+                    {% endif %}
                 {% endfor %}
                 <!-- End of Product Card -->
             </div>
