Feat: add meta title and detail tags for all templates

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -2,6 +2,12 @@
 {% load static %}
 {% load bag_tools %}
 
+{% block extra_title %}- Bag Contents{% endblock %}
+
+{% block extra_meta %}
+    <meta name="description" content="View the contents of your shopping bag.">
+{% endblock %}
+
 
 {% block content %}
 
