--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -2,6 +2,12 @@
 {% load static %}
 {% load bag_tools %}
 
+{% block extra_title %}- Checkout{% endblock %}
+
+{% block extra_meta %}
+    <meta name="description" content="Use the Island Bees secure checkout to place your order.">
+{% endblock %}
+
 {% block content %}
     <div class="container-fluid ib-container bg-ib-white text-ib-dark px-md-4 py-4 py-md-5 font-body">
         <div class="row">
