--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -4,7 +4,7 @@
 {% block extra_title %}- Add a review{% endblock %}
 
 {% block extra_meta %}
-    <meta name="description" content="WELCOME TO ISLAND BEES! Add your review here!">
+    <meta name="description" content="Add your review for {{product.name}} using our simple form">
 {% endblock %}
 
 {% block content %}
