--- a/faqs/templates/faqs/faqs.html
+++ b/faqs/templates/faqs/faqs.html
@@ -4,10 +4,15 @@
 {% block extra_title %}- FAQs{% endblock %}
 
 {% block extra_meta %}
-    <meta name="description" content="WELCOME TO ISLAND BEES! Want to know more? Check out our Frequently Asked Questions.">
+    <meta name="description" content="Want to know more about Island Bees? Check out our Frequently Asked Questions.">
 {% endblock %}
 
 {% block content %}
+
+{% for faq in faqs %}
+    <p>{{faq.question}}</p>
+    <p>{{faq.answer}}</p>
+{% endfor %}
 
 
 
