--- a/templates/base.html
+++ b/templates/base.html
@@ -224,7 +224,7 @@
                 <!-- More Info -->
                 <div class="upper-footer-section col-6 col-sm-3 col-md-2 mb-3">
                     <h3 class="text-yellow weight-semibold mb-2">MORE INFO</h3>
-                    <a class="d-block text-decoration-none" href="">
+                    <a class="d-block text-decoration-none" href="{% url 'faqs' %}">
                         <p class="text-ib-light mb-2 footer-link-text">FAQs</p>
                     </a>
                     <a class="d-block text-decoration-none" href="">
