fix: add conditional statement to 'phone_number' on order history / checkout success

--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -81,7 +81,9 @@
                         <p>{{ order.county }}</p>
                         <p>{{ order.postcode }}</p>
                         <p>{{ order.country.name }}</p>
-                        <p>{{ order.phone_number }}</p>
+                        {% if order.phone_number %}
+                            <p>{{ order.phone_number }}</p>
+                        {% endif %}
                         
                     </div>
 
