--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -174,8 +174,13 @@
                                 {% if request.user.is_superuser or request.user == review.user %}
                                     <div class="row">
                                         <div class="col mt-3">
-                                            <a href="{% url 'edit_review' review.id %}?next={{request.path}}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
-                                            <button type="button" data-toggle="modal" data-target="#modal-{{ review.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>                            
+                                            {% if request.user == review.user %}
+                                                <!-- Edit Review - Review Author Only -->
+                                                <a href="{% url 'edit_review' review.id %}?next={{ request.path|urlencode }}" class="edit-del-btn edit-btn font-title text-decoration-none weight-bold align-middle me-2">EDIT</a>
+                                            {% endif %}
+
+                                            <!-- Delete Review - Review Author or Superuser Only -->
+                                            <button type="button" data-toggle="modal" data-target="#modal-{{ review.id }}" class="edit-del-btn del-btn font-title text-decoration-none weight-bold align-middle">DELETE</a>
                                         </div>
                                     </div>
             
