--- a/templates/includes/mobile-nav-bar.html
+++ b/templates/includes/mobile-nav-bar.html
@@ -47,7 +47,7 @@
                 <div class="dropdown-menu text-end border-0 account-dropdown shadow bg-ib-light" aria-labelledby="user-options">
                     {% if request.user.is_authenticated %}
                     {% if request.user.is_superuser %}
-                    <a href="" class="dropdown-item">Product Management</a>
+                    <a href="" class="dropdown-item">Site Management</a>
                     {% endif %}
                     <a href="{% url 'profile' %}" class="dropdown-item">My Profile</a>
                     <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
